# Metasm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  language.md
examples/: basics.cpp  labels.cpp  logics.cpp  square_root.cpp
include/: Metasm.hpp
src/: Metasm.cpp
tests/: tests.cpp  tests_insts.cpp
